# humanDetection

./: .gitignore  classifiers.txt  humandetection.gen  humandetectionStruct.idl  readme.txt
codels/: Makefile.am  Ports.cpp  Ports.h  humandetection_Detection_codels.cc  humandetection_codels.cc  triangulation.cpp  triangulation.h
